--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -49,17 +49,18 @@
         </div>
     </nav>
 
-        <div class="container">
+        <div class="container mt-5 ">
             <div class="row">
-                <div class="col">
+                <div class=" col-12 text-center mt-5">
                     <h2>CONTACTANOS</h2>
                 </div>
-                <div class="col"><P>
+                <div class=" col-12"><P class="text-left">
                   Para cualquier duda sobre nuestros servicios, o como 
                   posdemos ayudar a tu lomito pudes contactarnos al correo:
                   lomitos@gmail.com o via whatsapp al 9999239823.
                 </P></div>
-                <div class="col">
+                <div class=" col-12">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3724.8101506417256!2d-89.60050612474419!3d21.00024598064194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjHCsDAwJzAwLjkiTiA4OcKwMzUnNTIuNiJX!5e0!3m2!1ses!2smx!4v1693591540035!5m2!1ses!2smx" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
