--- a/pages/nServicios.html
+++ b/pages/nServicios.html
@@ -19,11 +19,11 @@
     <link rel="shortcut icon" href="../img/BLANCO.ico" />
     <!--CSS-->
     <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="css/botonFlotante.css">
+    <link rel="stylesheet" href="../css/botonFlotante.css">
     <title>Physio Animal</title>
 </head>
 
-<body data-bs-spy="scroll" data-bs-target=".navbar">
+<body  >
     <!--navbar-->
     <nav class="navbar  navbar-dark  fixed-top navbar-expand-lg bg-principal" data-aos="fade-down">
         <div class="container color-principal">
@@ -42,7 +42,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="#contact">Contacto</a>
+                        <a class="nav-link text-light" href="contacto.html">Ubicanos</a>
                     </li>
                 </ul>
             </div>
@@ -62,11 +62,56 @@
             </div>
             <div class="row gx-4 gy-5">
                 <div class="col-md-6 feature" data-aos="fade-up">
-                    <div class="icon">
-                        
-                    </div>
                     <h3 class="mt-4 mb-3">Fisioterapia</h3>
-                    <p class="text-left p-4  fw-bold">
+                    <p class="text-left p-4 ">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                         Debitis consequuntur rem necessitatibus optio quam
+                          autem minima minus porro quasi enim.
+                    </p>
+                </div>  
+                <div class="col-md-6 feature" data-aos="fade-up">
+                    <h3 class="mt-4 mb-3">Rehabilitación</h3>
+                    <p class="text-left p-4 ">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                         Voluptates ex quibusdam quia quod incidunt iste officiis,
+                          accusamus expedita provident laboriosam?
+                    </p>
+                </div>
+                <div class="col-md-6 feature" data-aos="fade-up">
+                    <h3 class="mt-4 mb-3">Fisioterapia</h3>
+                    <p class="text-left p-4 ">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                         Debitis consequuntur rem necessitatibus optio quam
+                          autem minima minus porro quasi enim.
+                    </p>
+                </div>  
+                <div class="col-md-6 feature" data-aos="fade-up">
+                    <h3 class="mt-4 mb-3">Rehabilitación</h3>
+                    <p class="text-left p-4 ">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                         Voluptates ex quibusdam quia quod incidunt iste officiis,
+                          accusamus expedita provident laboriosam?
+                    </p>
+                </div>
+                <div class="col-md-6 feature" data-aos="fade-up">
+                    <h3 class="mt-4 mb-3">Fisioterapia</h3>
+                    <p class="text-left p-4 ">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                         Debitis consequuntur rem necessitatibus optio quam
+                          autem minima minus porro quasi enim.
+                    </p>
+                </div>  
+                <div class="col-md-6 feature" data-aos="fade-up">
+                    <h3 class="mt-4 mb-3">Rehabilitación</h3>
+                    <p class="text-left p-4 ">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                         Voluptates ex quibusdam quia quod incidunt iste officiis,
+                          accusamus expedita provident laboriosam?
+                    </p>
+                </div>
+                <div class="col-md-6 feature" data-aos="fade-up">
+                    <h3 class="mt-4 mb-3">Fisioterapia</h3>
+                    <p class="text-left p-4 ">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                          Debitis consequuntur rem necessitatibus optio quam
                           autem minima minus porro quasi enim.
@@ -90,12 +135,12 @@
 
     <div class="containerBoton2  d-block d-xxl-none d-lg-none d-xl-none">
         <a href="tel:+529994417237">
-            <img class="botonT" src="img/phone-solid.svg" alt="boton lamada">
+            <img class="botonT" src="../img/phone-solid.svg" alt="boton lamada">
         </a>
     </div>
     <div class="containerBoton d-block d-xxl-none d-lg-none d-xl-none">
         <a href="https://wa.me/+529994417237?text=Solicito%20informacion" target="_blank">
-            <img class="botonW" src="img/waIcono.png" alt="boton whatsapp">
+            <img class="botonW" src="../img/waIcono.png" alt="boton whatsapp">
         </a>
     </div>
 
