--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <title>Physio Animal</title>
 </head>
 
-<body data-bs-spy="scroll" data-bs-target=".navbar">
+<body  data-bs-target=".navbar">
     <!--navbar-->
-    <nav class="navbar  navbar-dark  fixed-top navbar-expand-lg bg-principal" data-aos="fade-down">
+    <nav class="navbar  navbar-dark  fixed-top navbar-expand-lg bg-principal" ">
         <div class="container color-principal">
             <a class="navbar-brand fuente-brand text-light " href="#">Physio Animal</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -80,10 +80,10 @@
                 </div>
             </div>
             <div class="row g-4">
-                <div class="col-md-6" data-aos="zoom-in">
+                <div class="col-md-6" data-aos="fade-up"  data-aos-duration="2700">
                     <div class="service">
                         <div class="service-img">
-                            <img src="img/cheems.jpg" alt="" />
+                            <img class="border-radius" src="img/cheems.jpg" alt="" />
                         </div>
                         <h4 class="mt-1 pt-4 mb-5 fuente-brand color-texto-secundario text-shadow-titulos">Misión</h4>
                         <p class="text-start p-2">
@@ -92,10 +92,10 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-6" data-aos="zoom-in">
+                <div class="col-md-6" data-aos="fade-up"  data-aos-duration="2700">
                     <div class="service">
                         <div class="service-img">
-                            <img src="img/cheems.jpg" alt="" />
+                            <img class="border-radius" src="img/cheems.jpg" alt="" />
                         </div>
                         <h4 class="mt-1 pt-4 mb-5 color-texto-secundario text-shadow-titulos fuente-brand">Visión</h4>
                         <p class="text-start p-2 ">
@@ -112,7 +112,7 @@
         <div class="overlay"></div>
         <div class="container text-white text-center">
             <div class="row">
-                <div class="col-12 section-intro text-center" data-aos="fade-up">
+                <div class="col-12 section-intro text-center" data-aos="fade-up" data-aos-duration="2700">
                     <h2 class="mb-5 fuente-brand"></h2>
                 </div>
             </div>
@@ -129,8 +129,8 @@
                     </h2>
                 </div>
             </div>
-            <div class="row gx-4 gy-5">
-                <div class="col-md-6 feature" data-aos="fade-up">
+            <div class="row m-auto">
+                <div class="col-md-6 feature" data-aos="fade-up" data-aos-duration="2700">
                     <div class="icon">
                     </div>
                     <h3 class="mt-4 mb-3">Fisioterapia</h3>
@@ -140,7 +140,7 @@
                         autem minima minus porro quasi enim.
                     </p>
                 </div>
-                <div class="col-md-6 feature" data-aos="fade-up">
+                <div class="col-md-6 feature" data-aos="fade-up" data-aos-duration="2700">
                     <div class="icon">
                     </div>
                     <h3 class="mt-4 mb-3">Rehabilitación</h3>
@@ -166,27 +166,27 @@
     <section id="blog" class="bg-light">
         <div class="container">
             <div class="row">
-                <div class="col-12 section-intro text-center" data-aos="fade-up">
+                <div class="col-12 section-intro text-center" data-aos="fade-up" data-aos-duration="2700">
                     <h2 class="fuente-brand color-texto-secundario text-shadow-titulos">HISTORIAS BONITAS</h2>
                 </div>
             </div>
             <div class="row text-left">
-                <div class="col-md-4" data-aos="fade-up">
-                    <img class="img-trabajos-previos" src="img/cheems.jpg" alt="" />
+                <div class="col-md-4" data-aos="fade-up" data-aos-duration="2700">
+                    <img class=" border-radius" src="img/cheems.jpg" alt="" />
                     <div class="mt-2">
                         <h5 class="mt-1 fs-6 text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             Totam recusandae ratione, asperiores maiores repellat soluta.z</h5>
                     </div>
                 </div>
-                <div class="col-md-4" data-aos="fade-up">
-                    <img class="img-trabajos-previos" src="img/cheems.jpg" alt="" />
+                <div class="col-md-4" data-aos="fade-up" data-aos-duration="2700">
+                    <img class=" border-radius" src="img/cheems.jpg" alt="" />
                     <div class="mt-2">
                         <h5 class="mt-1 mb-2  fs-6">Lorem, ipsum dolor sit amet consectetur adipisicing
                             elit. Earum dolor quas nulla, doloremque rem iure.</h5>
                     </div>
                 </div>
-                <div class="col-md-4" data-aos="fade-up">
-                    <img class="img-trabajos-previos" src="img/cheems.jpg" alt="" />
+                <div class="col-md-4" data-aos="fade-up" data-aos-duration="2700">
+                    <img class=" border-radius" src="img/cheems.jpg" alt="" />
                     <div class="mt-2">
                         <h5 class="m-2 fs-6">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum ex doloremque
                             quis esse, repellat voluptates.</h5>
@@ -197,7 +197,7 @@
     <!--contact-->
     <section id="contact" class="bg-cover text-white" style="background-image: url(img/dogFoto4.jpg)">
         <div class="overlay"></div>
-        <div class="container">
+        <!--   <div class="container">
             <div class="row">
                 <div class="col-12 section-intro text-center" data-aos="fade-up">
                     <h2>CONTACTANOS</h2>
@@ -227,7 +227,37 @@
                     </form>
                 </div>
             </div>
+        </div> -->
+        <div class="container background-amarillo">
+            <div class="row">
+
+                <div class="col-md-8 mx-auto" data-aos="fade-up" data-aos-duration="3000">
+                    <div class="wrapper ">
+                        <h2 class=" text-left mb-3">CONTACTO</h2>
+                        <form action="https://formsubmit.co/herrera.ancona@gmail.com" method="POST">
+                            <label for="Nombre">Nombre</label><br />
+                            <input class="form-control" type="text" name="name" /><br />
+
+                            <label for="email">Correo Electrónico</label><br />
+                            <input class="form-control" type="email" name="email" /><br />
+
+                            <label for="subject">Asunto</label><br />
+                            <input class="form-control" type="text" name="subject" /><br />
+
+                            <label for="email">Comentarios</label><br />
+                            <textarea class="form-control" name="comments" cols="25" rows="4"></textarea><br />
+                            <div class="text-center">
+                                <input class="mb-2 btn btn-main " id="boton-enviar" type="submit" value="Enviar" />
+                            </div>
+                            <input type="hidden" name="_next"
+                                value="https://herrera1010.github.io/portfolio/mensaje-exitoso.html" />
+                            <input type="hidden" name="_captcha" value="false" />
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
+
     </section>
     <!--footer-->
     <footer class="py-4">
