botones de whatsapp correcion

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,7 +19,7 @@
     <link rel="shortcut icon" href="../img/BLANCO.ico" />
     <!--CSS-->
     <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="css/botonFlotante.css">
+    <link rel="stylesheet" href="../css/botonFlotante.css">
     <title>Physio Animal</title>
 </head>
 
@@ -66,12 +66,12 @@
 
     <div class="containerBoton2  d-block d-xxl-none d-lg-none d-xl-none">
         <a href="tel:+529994417237">
-            <img class="botonT" src="img/phone-solid.svg" alt="boton lamada">
+            <img class="botonT" src="../img/phone-solid.svg" alt="boton lamada">
         </a>
     </div>
     <div class="containerBoton d-block d-xxl-none d-lg-none d-xl-none">
         <a href="https://wa.me/+529994417237?text=Solicito%20informacion" target="_blank">
-            <img class="botonW" src="img/waIcono.png" alt="boton whatsapp">
+            <img class="botonW" src="../img/waIcono.png" alt="boton whatsapp">
         </a>
     </div>
 
