adicion de footer

--- a/pages/nServicios.html
+++ b/pages/nServicios.html
@@ -130,7 +130,21 @@
     
     </section>
 
-
+    <footer class="py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="mb-0 fuente-brand">Physio Animal</p>
+                </div>
+                <div class="col-md-6 text-md-end">
+                    <div>
+                        <a
+                            href="mailto:contacto@ingesamid.com?subject=Mail from our Website">contacto@physioanimal.com</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <div class="containerBoton2  d-block d-xxl-none d-lg-none d-xl-none">
