--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -58,12 +58,26 @@
                   posdemos ayudar a tu lomito pudes contactarnos al correo:
                   lomitos@gmail.com o via whatsapp al 9999239823.
                 </P></div>
-                <div class=" col-12 text-center " >                 
+                <div class=" col-12 text-center mb-5 w-100 " >                 
                     <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3724.8101506417256!2d-89.60050612474419!3d21.00024598064194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjHCsDAwJzAwLjkiTiA4OcKwMzUnNTIuNiJX!5e0!3m2!1ses!2smx!4v1693943855154!5m2!1ses!2smx" width="320" height="320" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
-
+        <footer class="py-4 mt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p class="mb-0 fuente-brand">Physio Animal</p>
+                    </div>
+                    <div class="col-md-6 text-md-end">
+                        <div>
+                            <a
+                                href="mailto:contacto@ingesamid.com?subject=Mail from our Website">contacto@physioanimal.com</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     <div class="containerBoton2  d-block d-xxl-none d-lg-none d-xl-none">
         <a href="tel:+529994417237">
             <img class="botonT" src="../img/phone-solid.svg" alt="boton lamada">
