--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">  
     <link href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css" rel="stylesheet" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/d20969dd14.js" crossorigin="anonymous"></script>
@@ -45,7 +44,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="pages/contacto.html">Contacto</a>
+                        <a class="nav-link text-light" href="pages/contacto.html">Ubicanos</a>
                     </li>
                 </ul>
             </div>
@@ -71,7 +70,7 @@
                 <div class="col-12 section-intro " data-aos="fade-up">
                     <h2 class="text-center fuente-brand mb-5 color-texto-secundario text-shadow-titulos">QUIENES SOMOS
                     </h2>
-                    <p class="text-start p-2">
+                    <p class="text-left ">
                         PHYSIO ANIMAL Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae consequatur
                         eveniet dicta obcaecati dolor delectus voluptas iste, reiciendis ut molestiae? Magni voluptates
                         temporibus eum ducimus non adipisci, dolores ab animi! Dolores praesentium cum non molestiae
@@ -287,10 +286,7 @@
         </a>
     </div>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/app.js"></script>
