--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<head>
+<>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
+        
     <link href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css" rel="stylesheet" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/d20969dd14.js" crossorigin="anonymous"></script>
@@ -58,8 +59,8 @@
                   posdemos ayudar a tu lomito pudes contactarnos al correo:
                   lomitos@gmail.com o via whatsapp al 9999239823.
                 </P></div>
-                <div class=" col-12 text-center mb-5 w-100 " >                 
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3724.8101506417256!2d-89.60050612474419!3d21.00024598064194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjHCsDAwJzAwLjkiTiA4OcKwMzUnNTIuNiJX!5e0!3m2!1ses!2smx!4v1693943855154!5m2!1ses!2smx" width="320" height="320" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+             <div class=" col-12 text-center mb-5 w-100 " >                 
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3724.8101506417256!2d-89.60050612474419!3d21.00024598064194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjHCsDAwJzAwLjkiTiA4OcKwMzUnNTIuNiJX!5e0!3m2!1ses!2smx!4v1693943855154!5m2!1ses!2smx" width="80%" height="320" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
@@ -89,10 +90,8 @@
         </a>
     </div>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="../js/app.js"></script>
