--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <div class="collapse navbar-collapse text-light" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto ">
           <a class="nav-link text-light active" aria-current="page" href="#">Inicio</a>
-          <a class="nav-link text-light " href="#">servicios</a>
-          <a class="nav-link text-light " href="#">contacto</a>
+          <a class="nav-link text-light " href="assets/pages/nServicios.html">servicios</a>
+          <a class="nav-link text-light " href="assets/pages/contacto.html">contacto</a>
 
         </div>
       </div>
@@ -107,7 +107,7 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="assets/img/PA_011.jpg" class="card-img-top foto-radius" alt="...">
+          <img src="assets/img/PA_011.jpg" class="card-img-top foto-radius max-height" alt="...">
           <div class="card-body">
             <h5 class="titulos-text text-center mt-2">Vision</h5>
             <p class="general-text">This is a longer card with supporting text below as a natural lead-in to additional
