test de fallo en iphone

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="assets/img/PA_011.jpg" class="card-img-top foto-radius max-height" alt="...">
+          <img src="assets/img/PA_011.jpg" class="card-img-top foto-radius " alt="...">
           <div class="card-body">
             <h5 class="titulos-text text-center mt-2">Vision</h5>
             <p class="general-text">This is a longer card with supporting text below as a natural lead-in to additional
