eliminacion de wave

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="assets/img/PA_011.jpg" class="card-img-top foto-radius " alt="...">
+          <img src="assets/img/PA_011.jpg" class="card-img-top foto-radius  max-height" alt="...">
           <div class="card-body">
             <h5 class="titulos-text text-center mt-2">Vision</h5>
             <p class="general-text">This is a longer card with supporting text below as a natural lead-in to additional
@@ -121,20 +121,22 @@
   </div>
 
   <!--SERVICIOS-->
-  <img src="assets/img/waveUp.svg" alt="" class="wave">
+
+
+
+
 
   <div class="container-fluid background-color-principal text-light ">
     <div class="row">
       <div class="col-12 section-intro text-center">
-        <h2 class="text-uppercase mb-5 fuente-brand ">
+        <h2 class="text-uppercase mb-5 fuente-brand p-3">
           nuestros servicios
         </h2>
       </div>
     </div>
-    <div class="row m-auto">
-      <div class="col-md-6 feature" data-aos="fade-up" data-aos-duration="2000">
-
-        <h3 class="mt-4 mb-3  text-center">Fisioterapia</h3>
+    <div class="row m-auto p-4">
+      <div class="col-md-6 feature " data-aos="fade-up" data-aos-duration="2000">
+        <h3 class="mt-4 mb-3 text-left p-3">Fisioterapia</h3>
         <p class="text-left p-4  fw-bold">
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Debitis consequuntur rem necessitatibus optio quam
@@ -142,21 +144,20 @@
         </p>
       </div>
       <div class="col-md-6 feature" data-aos="fade-up" data-aos-duration="2000">
-        <div class="icon">
-        </div>
-        <h3 class="mt-4 mb-3  text-light text-center">Rehabilitación</h3>
-        <p class="text-left p-4 fw-bold">
+        
+        <h3 class="mt-4 mb-3 p-2  text-light text-left">Rehabilitación</h3>
+        <p class="text-left  p-2 fw-bold">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit.
           Voluptates ex quibusdam quia quod incidunt iste officiis,
           accusamus expedita provident laboriosam?
         </p>
       </div>
     </div>
-    <div class="text-center mt-3">
+    <div class="text-center mt-3 p-5">
       <button type="button" class="btn text-white "><a class="nav-link" href="">Mas ...</a></button>
     </div>
   </div>
-  <img src="assets/img/waveDown.svg" alt="" class="wave">
+  
   <!--FINAL SERVICIOS-->
 
   <!--HISTORIAS BONITAS-->
