--- a/index.html
+++ b/index.html
@@ -49,24 +49,12 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="assets/img/banner1.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block text-dark">
-            <h5>First slide label</h5>
-            <p>Some representative placeholder content for the first slide.</p>
-          </div>
         </div>
         <div class="carousel-item">
           <img src="assets/img/banner2.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block text-light">
-            <h5>First slide label</h5>
-            <p>Some representative placeholder content for the first slide.</p>
-          </div>
         </div>
         <div class="carousel-item">
           <img src="assets/img/banner3.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block text-light">
-            <h5>First slide label</h5>
-            <p>Some representative placeholder content for the first slide.</p>
-          </div>
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -122,30 +110,25 @@
 
   <!--SERVICIOS-->
 
-
-
-
-
-  <div class="container-fluid background-color-principal text-light ">
+  <div class="container background-color-principal text-light ">
     <div class="row">
       <div class="col-12 section-intro text-center">
-        <h2 class="text-uppercase mb-5 fuente-brand p-3">
+        <h2 class="text-uppercase mt-4 mb-5  p-3">
           nuestros servicios
         </h2>
       </div>
     </div>
-    <div class="row m-auto p-4">
+    <div class="row m-auto p-1">
       <div class="col-md-6 feature " data-aos="fade-up" data-aos-duration="2000">
-        <h3 class="mt-4 mb-3 text-left p-3">Fisioterapia</h3>
-        <p class="text-left p-4  fw-bold">
+        <h3 class="mt-4 mb-3 text-center p-3">Fisioterapia</h3>
+        <p class="text-left p-2  fw-bold">
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Debitis consequuntur rem necessitatibus optio quam
           autem minima minus porro quasi enim.
         </p>
       </div>
       <div class="col-md-6 feature" data-aos="fade-up" data-aos-duration="2000">
-        
-        <h3 class="mt-4 mb-3 p-2  text-light text-left">Rehabilitación</h3>
+        <h3 class="mt-4 mb-3 text-center p-3">Rehabilitación</h3>
         <p class="text-left  p-2 fw-bold">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit.
           Voluptates ex quibusdam quia quod incidunt iste officiis,
