correcion en quiens somos y mision y vision

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
     <!--QUIENES SOMOS-->
     <section class="mt-4">
       <h2 class="titulos-text text-center">QUIÉNES SOMOS</h2>
-      <p class=" mt-2 p-2 text-left">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia eaque doloremque explicabo aspernatur
-        perspiciatis esse, mollitia obcaecati nemo iure corrupti? Molestiae, ratione esse.
+      <p class="  p-2 pading-lg m-auto text-left lg-text-center">
+        Somos un centro de fisioterapia y rehabilitación animal integral, en pequeñas
+        especies, conformado por especialistas dedicados al bienestar y salud de tu mascota.
       </p>
     </section>
     <!--FINAL QUIENES SOMOS-->
@@ -89,8 +89,8 @@
           <img src="assets/img/PA_006.jpg" class="card-img-top foto-radius-inverso max-height" alt="...">
           <div class="card-body">
             <h5 class="titulos-text text-center mt-2">Mision</h5>
-            <p class="general-text">This is a longer card with supporting text below as a natural lead-in to additional
-              content.</p>
+            <p class="general-text">Nuestra misión es mejorar la calidad de vida de nuestros pacientes que padecen
+              una discapacidad física con cierta limitación en sus actividades cotidianas.</p>
           </div>
         </div>
       </div>
@@ -99,8 +99,8 @@
           <img src="assets/img/PA_011.jpg" class="card-img-top foto-radius  max-height" alt="...">
           <div class="card-body">
             <h5 class="titulos-text text-center mt-2">Vision</h5>
-            <p class="general-text">This is a longer card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
+            <p class="general-text">Ser una empresa líder en el área de la rehabilitación integral para las pequeñas
+              especies, creando consiencia sobre la inclusión animal.</p>
           </div>
         </div>
       </div>
@@ -176,8 +176,8 @@
     </div>
     <!--FINAL HISTORIAS BONITAS-->
     <!--CONTACT0-->
+    <div class="container">
     <section class=" text-white bg-img" >
-      <div class="container ">
           <div class="row">
               <div class="col-md-8 mx-auto" data-aos="fade-up" data-aos-duration="2000">
                   <div class="wrapper ">
