--- a/index.html
+++ b/index.html
@@ -122,17 +122,17 @@
       <div class="col-md-6 feature " data-aos="fade-up" data-aos-duration="2000">
         <h3 class="mt-4 mb-3 text-center p-3">Fisioterapia</h3>
         <p class="text-left p-2  fw-bold">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Debitis consequuntur rem necessitatibus optio quam
-          autem minima minus porro quasi enim.
+           La fisioterapia es el arte y la ciencia del tratamiento por medio del ejercicio
+          terapéutico, calor, frío, luz, agua, masaje y electricidad - Organización Mundial de la Salud
+          (OMS).
         </p>
       </div>
       <div class="col-md-6 feature" data-aos="fade-up" data-aos-duration="2000">
         <h3 class="mt-4 mb-3 text-center p-3">Rehabilitación</h3>
         <p class="text-left  p-2 fw-bold">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-          Voluptates ex quibusdam quia quod incidunt iste officiis,
-          accusamus expedita provident laboriosam?
+          El conjunto de métodos que tienen por finalidad la recuperación de una
+actividad o función perdida o disminuida por traumatismo o enfermedad - Organización
+Mundial de la Salud (OMS).
         </p>
       </div>
     </div>
